--- a/sources/index.html
+++ b/sources/index.html
@@ -2,50 +2,54 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title></title>
+	<title>Demo TER</title>
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<style>
 		body
 		{
 			background-color: black;
 			margin: 0;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			height: 100vh;
+		}
+		canvas
+		{
+			background-color: red;
 		}
 	</style>
 </head>
+
 <body>
 	<canvas width="300" height="300"></canvas>
 </body>
+
 <script src="structures.js"></script>
 <script src="2d_trigo.js"></script>
 <script src="2d_quickhull.js"></script>
+
 <script type="text/javascript">
 
-// Génération de points aléatoires
+// ------------- Génération de points aléatoires -------------
 const vertex_list = [];
-/*for(let i = 0; i < 100; i++)
+for(let i = 0; i < 10; i++)
 	vertex_list.push(vertex_2d(
 		(Math.random() - .5)*2,
 		(Math.random() - .5)*2
-	));*/
-// vertex_list
-let point_naif = .99;
-vertex_list.push(vertex_2d(0,0));
-vertex_list.push(vertex_2d(-point_naif,-point_naif));
-vertex_list.push(vertex_2d(point_naif,-point_naif));
-vertex_list.push(vertex_2d(-point_naif,point_naif));
-vertex_list.push(vertex_2d(point_naif,point_naif));
+	));
 
-const V = (index) => {
-	if(vertex_list[index] === undefined)
-		console.error("Ne devrait pas arriver.");
-	return vertex_list[index];
-};
+let coord_naive = .9;
+vertex_list.push(vertex_2d(-coord_naive,coord_naive));
+vertex_list.push(vertex_2d(coord_naive,coord_naive));
+vertex_list.push(vertex_2d(coord_naive,-coord_naive));
+vertex_list.push(vertex_2d(-coord_naive,-coord_naive));
 
 // ------------- Exécution -------------
 let result = quick_hull_2d(vertex_list);
 
 console.log("result:", result);
-result.forEach( (x) => console.log(V(x)) );
-
+result.forEach( (x) => console.log(vertex_list[x]) );
 
 </script>
 </html>
