--- a/sources/index.html
+++ b/sources/index.html
@@ -24,10 +24,11 @@
 <body>
 	<canvas width="300" height="300"></canvas>
 </body>
-
+<!-- <script src="simpl_obj_parser.js"></script> -->
 <script src="structures.js"></script>
 <script src="2d_trigo.js"></script>
 <script src="2d_quickhull.js"></script>
+<!-- <script src="wgl_display.js"></script> -->
 
 <script type="text/javascript">
 
