- ajout de sommet, suppression de faces

--- a/sources/quickhull_3d/index.html
+++ b/sources/quickhull_3d/index.html
@@ -18,7 +18,7 @@
 		}
 		main
 		{
-			width: 500px;
+			width: 200px;
 		}
 		input#timeline
 		{
@@ -30,7 +30,7 @@
 
 <body>
 	<main>
-		<canvas width="500" height="500"></canvas>
+		<canvas width="200" height="200"></canvas>
 		<input type="range" id="timeline">
 	</main>
 </body>
@@ -97,7 +97,7 @@
 	GLOBAL_DISP.push_result_indices(result);
 	GLOBAL_DISP.set_ready();
 	GLOBAL_DISP.new_frame();
-	GLOBAL_DISP.autoplay();
+	//GLOBAL_DISP.autoplay();
 
 </script>
 
