renommage des méthodes

--- a/sources/quickhull_3d_reimplantation/index.html
+++ b/sources/quickhull_3d_reimplantation/index.html
@@ -40,7 +40,7 @@
 <script type="text/javascript">
 	"use strict";
 	// ------------- Génération de points aléatoires -------------
-	for (let i = 0; i < 20; i++)
+	for (let i = 0; i < 100; i++)
 	{
 		GLOBAL_V_LIST.push(
 			multiply3_1(
@@ -67,6 +67,7 @@
 <script src="wgl.js"></script>
 <script src="display.js"></script>
 <script src="structures.js"></script>
+<script src="dcel_structures.js"></script>
 <script src="3d_quickhull.js"></script>
 <script type="text/javascript">
 	"use strict";
