--- a/sources/quickhull_3d_reimplantation/index.html
+++ b/sources/quickhull_3d_reimplantation/index.html
@@ -54,7 +54,7 @@
 						.5
 					)
 				),
-				Math.cbrt(Math.random())*0 + 1
+				Math.cbrt(Math.random())//*0 + 1
 				// Math.random()**10
 			)
 		);
@@ -109,7 +109,7 @@
 	GLOBAL_DISP.push_result_indices(result);
 	GLOBAL_DISP.set_ready();
 	GLOBAL_DISP.new_frame();
-	GLOBAL_DISP.autoplay();
+	GLOBAL_DISP.autoplay(200);
 
 </script>
 
