optimisations (d'extraction et d'implémentation coq) + ajout structure dcel en coq + demo fonctionnelle génération "enveloppe initiale" en haskell

--- a/sources/quickhull_3d/index.html
+++ b/sources/quickhull_3d/index.html
@@ -118,7 +118,7 @@
 
 	GLOBAL_DISP.set_ready();
 	GLOBAL_DISP.new_frame();
-	GLOBAL_DISP.autoplay(50);
+	//GLOBAL_DISP.autoplay(50);
 </script>
 
 </html>
